--- a/w2_data_processing.qmd
+++ b/w2_data_processing.qmd
@@ -24,11 +24,11 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ```
 
-# 开场：为什么数据预处理如此重要？
+## 开场：为什么数据预处理如此重要？
 
 ---
 
-## 一个真实的场景
+### 一个真实的场景
 
 **假设你收到这样一份数据...**
 
@@ -53,33 +53,33 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 本周学习目标
+### 本周学习目标
 
-### 知识目标
+#### 知识目标
 1. 理解数据预处理的重要性（缺失值、异常值、归一化）
 2. 掌握回归模型的评估指标（MAE、RMSE、R²）
 3. 理解残差的概念及其诊断作用
 4. 掌握数据可视化的基本原则
 
-### 技能目标
+#### 技能目标
 1. 使用 pandas 探索和清洗数据
 2. 使用 matplotlib/seaborn 绘制多种图表
 3. 训练完整的线性回归模型并评估
 4. 进行残差分析
 
-### 核心理念
+#### 核心理念
 **"垃圾进，垃圾出"（Garbage In, Garbage Out）**  
 数据质量决定模型质量！
 
 ---
 
-# 第一部分：数据预处理
+## 第一部分：数据预处理
 
 ---
 
-## 缺失值处理
+### 缺失值处理
 
-### 什么是缺失值？
+#### 什么是缺失值？
 
 - 数据收集过程中未记录的值
 - 在 pandas 中显示为 `NaN`（Not a Number）
@@ -87,7 +87,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-### 🔍 缺失值处理的首要原则：理解业务逻辑
+#### 🔍 缺失值处理的首要原则：理解业务逻辑
 
 **业务理解优先于技术方法**
 
@@ -97,7 +97,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-### 📊 隐形缺失的经典案例
+#### 📊 隐形缺失的经典案例
 
 **R&D支出示例**：
 
@@ -124,7 +124,7 @@ company_data = {
 
 ---
 
-### 缺失值处理决策流程
+#### 缺失值处理决策流程
 
 ```{mermaid}
 graph TD
@@ -149,7 +149,7 @@ graph TD
 
 ---
 
-### 删除法
+#### 删除法
 
 **原始数据**：`[100, NaN, 120, 110, NaN]`
 
@@ -167,7 +167,7 @@ graph TD
 
 ---
 
-### 填充法
+#### 填充法
 
 **常用填充值**：
 
@@ -187,7 +187,7 @@ graph TD
 
 ---
 
-### 高级方法（简介）
+#### 高级方法（简介）
 
 **模型预测填充**：
 - 用其他特征预测缺失值
@@ -201,9 +201,9 @@ graph TD
 
 ---
 
-## 异常值检测与处理
+### 异常值检测与处理
 
-### 什么是异常值？
+#### 什么是异常值？
 
 **定义**：明显偏离正常范围的数据点
 
@@ -220,7 +220,7 @@ graph TD
 
 ---
 
-### 异常值识别：箱线图
+#### 异常值识别：箱线图
 
 ```{python}
 import numpy as np
@@ -276,7 +276,7 @@ plt.show()
 
 ---
 
-### 异常值识别：统计方法
+#### 异常值识别：统计方法
 
 **1. IQR 方法（四分位距）**
 
@@ -298,7 +298,7 @@ IQR = Q3 - Q1
 
 ---
 
-### 异常值处理决策
+#### 异常值处理决策
 
 ```{mermaid}
 graph TD
@@ -321,9 +321,9 @@ graph TD
 
 ---
 
-## 归一化（Normalization）
+### 归一化（Normalization）
 
-### 为什么需要归一化？
+#### 为什么需要归一化？
 
 **问题场景**：
 
@@ -343,7 +343,7 @@ graph TD
 
 ---
 
-### 两种常用归一化方法
+#### 两种常用归一化方法
 
 **1. Min-Max 归一化（缩放到 [0, 1]）**
 
@@ -379,7 +379,7 @@ $$
 
 ---
 
-### 归一化前后对比
+#### 归一化前后对比
 
 ```{python}
 from sklearn.preprocessing import MinMaxScaler, StandardScaler
@@ -438,7 +438,7 @@ plt.show()
 
 ---
 
-### 何时使用哪种归一化？
+#### 何时使用哪种归一化？
 
 | 方法 | 适用场景 | 例子 |
 |------|---------|------|
@@ -448,13 +448,13 @@ plt.show()
 
 ---
 
-# 第二部分：回归模型评估
+## 第二部分：回归模型评估
 
 ---
 
-## 残差（Residual）
+### 残差（Residual）
 
-### 核心概念
+#### 核心概念
 
 **定义**：
 $$
@@ -471,7 +471,7 @@ $$
 
 ---
 
-### 理想的残差
+#### 理想的残差
 
 ```{python}
 # 模拟好的模型和差的模型
@@ -534,9 +534,9 @@ plt.show()
 
 ---
 
-## MAE（平均绝对误差）
+### MAE（平均绝对误差）
 
-### 定义
+#### 定义
 
 $$
 \text{MAE} = \frac{1}{n}\sum_{i=1}^{n}|y_i - \hat{y}_i|
@@ -546,7 +546,7 @@ $$
 
 ---
 
-### MAE 的优缺点
+#### MAE 的优缺点
 
 **优点**：
 
@@ -566,9 +566,9 @@ $$
 
 ---
 
-## RMSE（均方根误差）
+### RMSE（均方根误差）
 
-### 定义
+#### 定义
 
 $$
 \text{RMSE} = \sqrt{\frac{1}{n}\sum_{i=1}^{n}(y_i - \hat{y}_i)^2}
@@ -582,7 +582,7 @@ $$
 
 ---
 
-### MAE vs RMSE 对比
+#### MAE vs RMSE 对比
 
 ```{python}
 # 对比两个场景
@@ -616,7 +616,7 @@ print(comparison_data.to_string(index=False))
 
 ---
 
-### MAE vs RMSE 总结
+#### MAE vs RMSE 总结
 
 | 指标 | 计算 | 优点 | 缺点 | 何时使用 |
 |------|------|------|------|---------|
@@ -631,9 +631,9 @@ print(comparison_data.to_string(index=False))
 
 ---
 
-## R² 决定系数
+### R² 决定系数
 
-### 定义
+#### 定义
 
 $$
 R^2 = 1 - \frac{SS_{res}}{SS_{tot}} = 1 - \frac{\sum(y_i - \hat{y}_i)^2}{\sum(y_i - \bar{y})^2}
@@ -646,7 +646,7 @@ $$
 
 ---
 
-### R² 的含义
+#### R² 的含义
 
 **取值范围**：
 
@@ -704,13 +704,13 @@ plt.show()
 
 ---
 
-# 第三部分：数据可视化
+## 第三部分：数据可视化
 
 ---
 
-## 为什么需要可视化？
+### 为什么需要可视化？
 
-### Anscombe's Quartet（安斯库姆四重奏）
+#### Anscombe's Quartet（安斯库姆四重奏）
 
 **四组数据，统计量完全相同**：
 
@@ -759,9 +759,9 @@ plt.show()
 
 ---
 
-## 常用图表类型
+### 常用图表类型
 
-### 散点图（Scatter Plot）
+#### 散点图（Scatter Plot）
 
 **用途**：观察两个变量的关系
 
@@ -794,7 +794,7 @@ plt.show()
 
 ---
 
-### 直方图（Histogram）
+#### 直方图（Histogram）
 
 **用途**：观察单个变量的分布
 
@@ -831,7 +831,7 @@ plt.show()
 
 ---
 
-### 相关系数热力图（Heatmap）
+#### 相关系数热力图（Heatmap）
 
 **用途**：一次性看所有特征之间的相关性
 
@@ -865,9 +865,9 @@ plt.show()
 
 ---
 
-## 可视化陷阱
+### 可视化陷阱
 
-### 陷阱 1：截断 Y 轴
+#### 陷阱 1：截断 Y 轴
 
 ```{python}
 # 示例：夸大差异
@@ -898,7 +898,7 @@ plt.show()
 
 ---
 
-### 陷阱 2：忽略样本量
+#### 陷阱 2：忽略样本量
 
 ```{python}
 # 示例：样本量差异
@@ -929,11 +929,11 @@ plt.show()
 
 ---
 
-# 第四部分：完整实战流程
+## 第四部分：完整实战流程
 
 ---
 
-## 完整流程概览
+### 完整流程概览
 
 ```{mermaid}
 graph TD
@@ -958,33 +958,33 @@ graph TD
 
 ---
 
-# 总结
+## 总结
 
 ---
 
-## 本讲知识回顾
+### 本讲知识回顾
 
-### 数据预处理
+#### 数据预处理
 
 - **缺失值**：删除 vs 填充
 - **异常值**：IQR 方法、3σ 原则、业务判断
 - **归一化**：Min-Max vs Z-score
 
-### 模型评估
+#### 模型评估
 
 - **残差**：模型诊断的核心
 - **MAE**：平均绝对误差，直观稳健
 - **RMSE**：均方根误差，惩罚大误差
 - **R²**：解释变异的比例
 
-### 数据可视化
+#### 数据可视化
 
 - 散点图、直方图、箱线图、热力图
 - **永远先可视化，再建模！**
 
 ---
 
-## 核心要点
+### 核心要点
 
 1. **数据质量决定模型质量**  
    "Garbage In, Garbage Out" → 数据清洗是基础
@@ -1000,7 +1000,7 @@ graph TD
 
 ---
 
-# Q&A
+## Q&A
 
 **Q1：请简述 Min-Max 归一化和 Z-score 标准化各自的计算目标（或特点）。根据讲义，为什么树模型（如决策树、随机森林）通常不需要进行归一化处理？**
 
