--- a/w3_lm_regularization.qmd
+++ b/w3_lm_regularization.qmd
@@ -27,11 +27,11 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ```
 
-# 开场：一个问题
+## 开场：一个问题
 
 ---
 
-## 当模型"太聪明"时...
+### 当模型"太聪明"时...
 
 **场景**：你训练了一个房价预测模型
 
@@ -48,34 +48,34 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 本周学习目标
+### 本周学习目标
 
-### 知识目标
+#### 知识目标
 1. 理解过拟合与欠拟合的概念
 2. 理解正则化的基本思想（限制模型复杂度）
 3. 掌握 Ridge、Lasso、Elastic Net 的区别和应用场景
 4. 了解交叉验证的作用
 
-### 技能目标
+#### 技能目标
 1. 使用 sklearn 训练正则化回归模型
 2. 使用交叉验证选择最优正则化参数
 3. 绘制正则化路径图
 4. 解释 Lasso 的特征选择结果
 
-### 核心理念
+#### 核心理念
 
 **"简单的模型往往更好"（Occam's Razor）**  
 复杂度与泛化能力的权衡是机器学习的核心！
 
 ---
 
-# 第一部分：过拟合与欠拟合
+## 第一部分：过拟合与欠拟合
 
 ---
 
-## 用多项式回归理解过拟合
+### 用多项式回归理解过拟合
 
-### 真实场景模拟
+#### 真实场景模拟
 
 假设真实关系是： $y = 2x + 1 + \epsilon$，其中 $\epsilon$ 是噪声。
 
@@ -137,7 +137,7 @@ plt.show()
 
 ---
 
-## 欠拟合 vs 过拟合 vs 刚刚好
+### 欠拟合 vs 过拟合 vs 刚刚好
 
 | 模型状态   | 模型复杂度 | 训练集误差 | 测试集误差 | 问题         | 表现                  |
 |:--------:|:---------:|:----------:|:----------:|:-----------:|:---------------------:|
@@ -153,7 +153,7 @@ plt.show()
 
 ---
 
-## Bias-Variance Tradeoff（偏差-方差权衡）
+### Bias-Variance Tradeoff（偏差-方差权衡）
 
 ```{python}
 #| echo: false
@@ -198,13 +198,13 @@ plt.show()
 
 ---
 
-# 第二部分：正则化的直觉
+## 第二部分：正则化的直觉
 
 ---
 
-## 什么是正则化？
+### 什么是正则化？
 
-### 问题
+#### 问题
 
 **普通线性回归**的目标：
 $$
@@ -213,7 +213,7 @@ $$
 
 只关心**拟合训练数据**，不管模型复杂度！
 
-### 正则化的想法
+#### 正则化的想法
 
 **在损失函数中加入惩罚项**：
 $$
@@ -226,7 +226,7 @@ $$
 
 ---
 
-## 正则化的类比
+### 正则化的类比
 
 **类比 1：给模型"戴镣铐"**
 
@@ -242,7 +242,7 @@ $$
 
 ---
 
-## 正则化的几何直觉
+### 正则化的几何直觉
 
 ```{python}
 #| echo: false
@@ -299,13 +299,13 @@ plt.show()
 
 ---
 
-# 第三部分：三种正则化方法
+## 第三部分：三种正则化方法
 
 ---
 
-## Ridge 回归（L2 正则化）
+### Ridge 回归（L2 正则化）
 
-### 损失函数
+#### 损失函数
 
 $$
 \min \sum_{i=1}^{n}(y_i - \hat{y}_i)^2 + \alpha \sum_{j=1}^{p}w_j^2
@@ -313,7 +313,7 @@ $$
 
 **惩罚项**：$ \alpha \sum_{j=1}^{p}w_j^2 $ = 权重的平方和
 
-### 特点
+#### 特点
 
 ✅ **让所有权重变小**  
 ✅ **不会让权重变成 0**  
@@ -322,9 +322,9 @@ $$
 
 ---
 
-## Lasso 回归（L1 正则化）
+### Lasso 回归（L1 正则化）
 
-### 损失函数
+#### 损失函数
 
 $$
 \min \sum_{i=1}^{n}(y_i - \hat{y}_i)^2 + \alpha \sum_{j=1}^{p}|w_j|
@@ -332,7 +332,7 @@ $$
 
 **惩罚项**： $ \alpha \sum_{j=1}^{p}|w_j| $ = 权重的绝对值和
 
-### 特点
+#### 特点
 
 ✅ **让某些权重直接变为 0**（自动特征选择）  
 ✅ **产生稀疏模型**（只保留重要特征）  
@@ -341,9 +341,9 @@ $$
 
 ---
 
-## Elastic Net（L1 + L2）
+### Elastic Net（L1 + L2）
 
-### 损失函数
+#### 损失函数
 
 $$
 \min \sum_{i=1}^{n}(y_i - \hat{y}_i)^2 + \alpha \left( \rho \sum_{j=1}^{p}|w_j| + \frac{1-\rho}{2} \sum_{j=1}^{p}w_j^2 \right)
@@ -354,7 +354,7 @@ $$
 - **α**：正则化强度
 - **ρ**（l1_ratio）：L1 和 L2 的混合比例（0 = 纯 L2，1 = 纯 L1）
 
-### 特点
+#### 特点
 
 ✅ **结合 Ridge 和 Lasso 的优点**  
 ✅ **在相关特征较多时表现更好**  
@@ -362,7 +362,7 @@ $$
 
 ---
 
-## 三种方法对比总结
+### 三种方法对比总结
 | 方法             | 正则化项                | 权重特点        | 特征选择 | 适用场景         | sklearn类         |
 |------------------|------------------------|----------------|----------|------------------|-------------------|
 | 普通线性回归     | 无                     | 可能很大       | 否       | 特征少、数据多   | LinearRegression  |
@@ -372,11 +372,11 @@ $$
 
 ---
 
-# 第四部分：正则化参数 α 的选择
+## 第四部分：正则化参数 α 的选择
 
 ---
 
-## α 的作用
+### α 的作用
 
 ```{python}
 #| echo: false
@@ -452,9 +452,9 @@ plt.show()
 
 ---
 
-## 交叉验证（Cross-Validation）
+### 交叉验证（Cross-Validation）
 
-### 为什么需要交叉验证？
+#### 为什么需要交叉验证？
 
 **错误做法** ❌：在测试集上尝试不同的 α，选最好的
 
@@ -463,7 +463,7 @@ plt.show()
 
 **正确做法** ✓：用交叉验证在训练集上选 α
 
-### K-Fold 交叉验证
+#### K-Fold 交叉验证
 
 ```{python}
 #| echo: false
@@ -523,11 +523,11 @@ plt.show()
 
 ---
 
-# 第五部分：正则化路径与可视化
+## 第五部分：正则化路径与可视化
 
 ---
 
-## 正则化路径图（Regularization Path）
+### 正则化路径图（Regularization Path）
 
 **问题**：随着 α 增大，各特征的系数如何变化？
 
@@ -595,11 +595,11 @@ plt.show()
 
 ---
 
-# 第六部分：实践建议
+## 第六部分：实践建议
 
 ---
 
-## 正则化回归完整流程
+### 正则化回归完整流程
 
 ```{mermaid}
 graph TD
@@ -630,9 +630,9 @@ graph TD
 
 ---
 
-## 常见错误与注意事项
+### 常见错误与注意事项
 
-### ❌ 错误 1：忘记标准化
+#### ❌ 错误 1：忘记标准化
 
 **错误做法**：直接在原始数据上训练正则化模型
 
@@ -649,7 +649,7 @@ graph TD
 
 ---
 
-### ❌ 错误 2：在测试集上选 α
+#### ❌ 错误 2：在测试集上选 α
 
 **错误做法**：尝试不同的 α 值，在测试集上选择表现最好的
 
@@ -666,7 +666,7 @@ graph TD
 
 ---
 
-### ❌ 错误 3：选择不合适的正则化方法
+#### ❌ 错误 3：选择不合适的正则化方法
 
 | 场景                   | 推荐方法      | 原因                   |
 |------------------------|-------------|------------------------|
@@ -678,9 +678,9 @@ graph TD
 
 ---
 
-## 实用技巧
+### 实用技巧
 
-### 技巧 1：先尝试 Lasso
+#### 技巧 1：先尝试 Lasso
 
 **为什么**：Lasso 可以自动做特征选择，告诉你哪些特征真正重要
 
@@ -688,7 +688,7 @@ graph TD
 - 可以根据 Lasso 的结果决定是否需要特征工程
 - 帮助理解数据的特征重要性分布
 
-### 技巧 2：绘制验证曲线
+#### 技巧 2：绘制验证曲线
 
 **目的**：观察 α 参数如何影响模型性能
 
@@ -702,7 +702,7 @@ graph TD
 - α 适中：验证集表现最好 ✓
 - α 太大：训练和验证都表现差（欠拟合）
 
-### 技巧 3：对比多种方法
+#### 技巧 3：对比多种方法
 
 **推荐做法**：
 
@@ -715,30 +715,30 @@ graph TD
 
 ---
 
-# 总结
+## 总结
 
 ---
 
-## 本讲核心概念
+### 本讲核心概念
 
-### 过拟合与正则化
+#### 过拟合与正则化
 - **过拟合**：模型太复杂，记住了训练数据的噪声
 - **正则化**：在损失函数中加入复杂度惩罚，限制模型复杂度
 - **Bias-Variance Tradeoff**：找到偏差和方差的平衡点
 
-### 三种正则化方法
+#### 三种正则化方法
 - **Ridge (L2)**：让系数变小但不为 0，适合所有特征都重要
 - **Lasso (L1)**：让某些系数变为 0，自动特征选择
 - **Elastic Net**：结合 Ridge 和 Lasso，折中方案
 
-### 参数选择
+#### 参数选择
 - **交叉验证**：避免在测试集上调参
 - **RidgeCV/LassoCV**：自动选择最优 α
 - **正则化路径**：观察 α 变化时系数的变化
 
 ---
 
-## 重要提醒
+### 重要提醒
 
 1. **正则化前必须标准化特征** ⚠️  
    否则正则化会不公平地惩罚某些特征
@@ -754,7 +754,7 @@ graph TD
 
 ---
 
-# Q&A
+## Q&A
 
 **Q1：什么是“过拟合” (Overfitting)？根据讲义的开场案例，它的关键信号是什么？**
 
