--- a/w4_classification_decision_tree.qmd
+++ b/w4_classification_decision_tree.qmd
@@ -24,11 +24,11 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ```
 
-# 开场：从预测数值到预测类别
+## 开场：从预测数值到预测类别
 
 ---
 
-## 上周回顾
+### 上周回顾
 
 **上两周学了什么？**
 
@@ -43,7 +43,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 本周的新挑战
+### 本周的新挑战
 
 **新任务**：**分类**（预测离散类别）
 
@@ -58,16 +58,16 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 本周学习目标
+### 本周学习目标
 
-### 知识目标
+#### 知识目标
 1. 理解分类与回归的本质区别
 2. 掌握决策树的基本原理
 3. 理解混淆矩阵（TP、FP、TN、FN）
 4. 掌握分类模型评估指标（准确率、精确率、召回率、F1、AUC）
 5. 理解 ROC 曲线的含义
 
-### 技能目标
+#### 技能目标
 1. 使用 sklearn 训练决策树分类器
 2. 计算并可视化混淆矩阵
 3. 绘制 ROC 曲线并计算 AUC
@@ -75,11 +75,11 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-# 第一部分：分类 vs 回归
+## 第一部分：分类 vs 回归
 
 ---
 
-## 核心区别
+### 核心区别
 
 ```{mermaid}
 graph LR
@@ -99,7 +99,7 @@ graph LR
 
 ---
 
-## 对比表格
+### 对比表格
 
 | 维度 | 回归 (Regression) | 分类 (Classification) |
 |------|------------------|---------------------|
@@ -112,7 +112,7 @@ graph LR
 
 ---
 
-## 快速判断练习
+### 快速判断练习
 
 **判断以下问题是分类还是回归？**
 
@@ -125,21 +125,21 @@ graph LR
 
 ---
 
-## 金融场景中的分类问题
+### 金融场景中的分类问题
 
-### 信用风险评估
+#### 信用风险评估
 
 - **问题**：这个贷款申请人会违约吗？
 - **类别**：违约 / 不违约
 - **特征**：收入、信用评分、负债率、工作年限
 
-### 欺诈检测
+#### 欺诈检测
 
 - **问题**：这笔交易是否欺诈？
 - **类别**：欺诈 / 正常
 - **特征**：交易金额、时间、地点、历史行为
 
-### 客户流失预测
+#### 客户流失预测
 
 - **问题**：客户下个月是否会流失？
 - **类别**：流失 / 留存
@@ -147,11 +147,11 @@ graph LR
 
 ---
 
-# 第二部分：决策树（Decision Tree）
+## 第二部分：决策树（Decision Tree）
 
 ---
 
-## 引入：人类如何做决策？
+### 引入：人类如何做决策？
 
 **场景：银行如何决定是否发放贷款？**
 
@@ -172,7 +172,7 @@ ELSE
 
 ---
 
-## 决策树的结构
+### 决策树的结构
 
 ```{mermaid}
 graph TD
@@ -197,9 +197,9 @@ graph TD
 
 ---
 
-## 决策树如何学习？
+### 决策树如何学习？
 
-### 核心思想
+#### 核心思想
 
 **每次选择"最能区分两类"的特征进行分裂**
 
@@ -210,7 +210,7 @@ graph TD
 
 ---
 
-### 示例数据
+#### 示例数据
 
 | 收入 | 信用分 | 是否违约 |
 |------|--------|----------|
@@ -225,7 +225,7 @@ graph TD
 
 ---
 
-### 尝试分裂 1：收入 > 5000
+#### 尝试分裂 1：收入 > 5000
 
 ```{mermaid}
 graph TD
@@ -240,7 +240,7 @@ graph TD
 
 ---
 
-### 尝试分裂 2：信用分 > 700
+#### 尝试分裂 2：信用分 > 700
 
 ```{mermaid}
 graph TD
@@ -257,9 +257,9 @@ graph TD
 
 ---
 
-## 决策树的优缺点
+### 决策树的优缺点
 
-### 优点 ✓
+#### 优点 ✓
 
 - **易于理解**：可视化，符合人类思维
 - **可解释性强**：能清楚看到决策路径
@@ -267,7 +267,7 @@ graph TD
 - **能处理非线性**：不像线性回归只能拟合直线
 - **自动特征选择**：重要特征会靠近根节点
 
-### 缺点 ✗
+#### 缺点 ✗
 
 - **容易过拟合**：树太深会记住训练数据
 - **不稳定**：数据稍微变化，树结构可能完全不同
@@ -275,7 +275,7 @@ graph TD
 
 ---
 
-## 控制过拟合：关键参数
+### 控制过拟合：关键参数
 
 | 参数 | 含义 | 效果 | 建议值 |
 |------|------|------|--------|
@@ -288,11 +288,11 @@ graph TD
 
 ---
 
-# 第三部分：混淆矩阵
+## 第三部分：混淆矩阵
 
 ---
 
-## 为什么需要混淆矩阵？
+### 为什么需要混淆矩阵？
 
 **场景**：违约预测
 
@@ -305,7 +305,7 @@ graph TD
 
 ---
 
-## 混淆矩阵的定义
+### 混淆矩阵的定义
 
 **Titanic 例子**：预测乘客是否存活
 
@@ -316,15 +316,15 @@ graph TD
 
 ---
 
-## 四个概念详解
+### 四个概念详解
 
-### TP（True Positive，真阳性）
+#### TP（True Positive，真阳性）
 
 - **含义**：真实是正类，预测也是正类 ✓
 - **例子**：真的存活，预测存活（50 人）
 - **理解**：预测对了，皆大欢喜
 
-### FN（False Negative，假阴性）
+#### FN（False Negative，假阴性）
 
 - **含义**：真实是正类，预测是负类 ✗
 - **例子**：真的存活，预测死亡（10 人）
@@ -332,13 +332,13 @@ graph TD
 
 ---
 
-### FP（False Positive，假阳性）
+#### FP（False Positive，假阳性）
 
 - **含义**：真实是负类，预测是正类 ✗
 - **例子**：真的死亡，预测存活（5 人）
 - **理解**：**误报**（本不该报警，但误报了）
 
-### TN（True Negative，真阴性）
+#### TN（True Negative，真阴性）
 
 - **含义**：真实是负类，预测也是负类 ✓
 - **例子**：真的死亡，预测死亡（35 人）
@@ -346,7 +346,7 @@ graph TD
 
 ---
 
-## 记忆方法
+### 记忆方法
 
 ```{mermaid}
 graph TD
@@ -371,7 +371,7 @@ graph TD
 
 ---
 
-## 可视化混淆矩阵
+### 可视化混淆矩阵
 
 ```{python}
 import numpy as np
@@ -419,13 +419,13 @@ print(f"TP={TP}, FN={FN}, FP={FP}, TN={TN}")
 
 ---
 
-# 第四部分：分类评估指标
+## 第四部分：分类评估指标
 
 ---
 
-## 准确率（Accuracy）
+### 准确率（Accuracy）
 
-### 定义
+#### 定义
 
 $$
 \text{Accuracy} = \frac{TP + TN}{\text{总样本数}} = \frac{\text{预测正确的}}{\text{全部}}
@@ -435,7 +435,7 @@ $$
 
 ---
 
-### 准确率的问题
+#### 准确率的问题
 
 **场景：欺诈检测**
 
@@ -453,9 +453,9 @@ $$
 
 ---
 
-## 精确率（Precision）
+### 精确率（Precision）
 
-### 定义
+#### 定义
 
 $$
 \text{Precision} = \frac{TP}{TP + FP} = \frac{\text{真正是正类}}{\text{预测为正类}}
@@ -475,9 +475,9 @@ $$
 
 ---
 
-## 召回率（Recall / TPR）
+### 召回率（Recall / TPR）
 
-### 定义
+#### 定义
 
 $$
 \text{Recall} = \frac{TP}{TP + FN} = \frac{\text{找出来的正类}}{\text{真正的正类}}
@@ -498,7 +498,7 @@ $$
 
 ---
 
-## Precision vs Recall
+### Precision vs Recall
 
 ```{python}
 # 可视化 Precision vs Recall
@@ -538,9 +538,9 @@ plt.show()
 
 ---
 
-## F1 分数
+### F1 分数
 
-### 定义
+#### 定义
 
 $$
 F1 = 2 \times \frac{\text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}}
@@ -557,7 +557,7 @@ $$
 
 ---
 
-### F1 的应用场景
+#### F1 的应用场景
 
 **何时使用 F1？**
 
@@ -589,7 +589,7 @@ plt.show()
 
 ---
 
-## 指标总结对比
+### 指标总结对比
 
 | 指标 | 公式 | 关注点 | 何时使用 | 例子 |
 |------|------|--------|---------|------|
@@ -600,11 +600,11 @@ plt.show()
 
 ---
 
-# 第五部分：ROC 曲线与 AUC
+## 第五部分：ROC 曲线与 AUC
 
 ---
 
-## 分类阈值的影响
+### 分类阈值的影响
 
 **问题**：分类器输出的是**概率**，如何转成类别？
 
@@ -621,7 +621,7 @@ plt.show()
 
 ---
 
-## 阈值对指标的影响
+### 阈值对指标的影响
 
 ```{python}
 # 模拟阈值变化
@@ -657,9 +657,9 @@ print(df_thresh.to_string(index=False))
 
 ---
 
-## ROC 曲线
+### ROC 曲线
 
-### 定义
+#### 定义
 
 **ROC（Receiver Operating Characteristic）曲线**：
 
@@ -669,7 +669,7 @@ print(df_thresh.to_string(index=False))
 
 ---
 
-### ROC 曲线可视化
+#### ROC 曲线可视化
 
 ```{python}
 from sklearn.metrics import roc_curve, auc
@@ -700,7 +700,7 @@ plt.show()
 
 ---
 
-## 理解 ROC 曲线
+### 理解 ROC 曲线
 
 ```{mermaid}
 graph TD
@@ -724,9 +724,9 @@ graph TD
 
 ---
 
-## AUC（Area Under Curve）
+### AUC（Area Under Curve）
 
-### 定义
+#### 定义
 
 **AUC**：ROC 曲线下的面积
 
@@ -734,7 +734,7 @@ graph TD
 
 ---
 
-### AUC 的含义
+#### AUC 的含义
 
 **直观解释**：
 
@@ -751,7 +751,7 @@ graph TD
 
 ---
 
-### 为什么 AUC 重要？
+#### 为什么 AUC 重要？
 
 **优点**：
 
@@ -771,18 +771,18 @@ graph TD
 
 ---
 
-# 总结
+## 总结
 
 ---
 
-## 本讲知识回顾
+### 本讲知识回顾
 
-### 分类 vs 回归
+#### 分类 vs 回归
 
 - **回归**：预测连续值（房价、温度）
 - **分类**：预测离散类别（存活/死亡、是/否）
 
-### 决策树
+#### 决策树
 
 - 结构：根节点、内部节点、叶节点
 - 原理：选择最能区分的特征分裂
@@ -791,7 +791,7 @@ graph TD
 
 ---
 
-### 混淆矩阵与评估指标
+#### 混淆矩阵与评估指标
 
 | 概念 | 含义 | 何时重要 |
 |------|------|---------|
@@ -805,7 +805,7 @@ graph TD
 
 ---
 
-### ROC 与 AUC
+#### ROC 与 AUC
 
 - **ROC 曲线**：不同阈值下的 TPR vs FPR
 - **AUC**：ROC 曲线下面积（0.5~1.0）
@@ -814,7 +814,7 @@ graph TD
 
 ---
 
-## 核心要点
+### 核心要点
 
 1. **选对评估指标**  
    类别平衡 → 准确率；类别不平衡 → AUC
@@ -830,7 +830,7 @@ graph TD
 
 ---
 
-# Q&A
+## Q&A
 
 **Q1：请用一句话概括“分类”与“回归”的本质区别，并判断“预测客户信用评级（A/B/C/D）”属于哪一类？** 
 
