--- a/w5_ensemble_learning.qmd
+++ b/w5_ensemble_learning.qmd
@@ -24,11 +24,11 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ```
 
-# 开场：单棵树的困境
+## 开场：单棵树的困境
 
 ---
 
-## 上周回顾
+### 上周回顾
 
 **决策树**：
 
@@ -38,7 +38,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 过拟合演示
+### 过拟合演示
 
 ```{python}
 import numpy as np
@@ -91,7 +91,7 @@ plt.show()
 
 ---
 
-## 本周的解决方案
+### 本周的解决方案
 
 **核心思想**："三个臭皮匠，顶个诸葛亮"
 
@@ -105,16 +105,16 @@ plt.show()
 
 ---
 
-## 本周学习目标
+### 本周学习目标
 
-### 知识目标
+#### 知识目标
 1. 理解集成学习的核心思想
 2. 掌握 Bagging 和 Boosting 的本质区别
 3. 了解随机森林的工作原理
 4. 了解 GBDT 的工作原理
 5. 理解关键超参数的作用
 
-### 技能目标
+#### 技能目标
 1. 使用 sklearn 训练随机森林
 2. 使用 LightGBM 训练 GBDT
 3. 进行超参数调整
@@ -123,19 +123,19 @@ plt.show()
 
 ---
 
-# 第一部分：集成学习核心思想
+## 第一部分：集成学习核心思想
 
 ---
 
-## 类比：专家团队 vs 单个专家
+### 类比：专家团队 vs 单个专家
 
-### 单个专家（单棵树）
+#### 单个专家（单棵树）
 
 - 可能有盲点
 - 受个人经验限制
 - 容易出错
 
-### 专家团队（多棵树）
+#### 专家团队（多棵树）
 
 - 多个视角
 - 互补长短
@@ -143,7 +143,7 @@ plt.show()
 
 ---
 
-## 集成学习的数学直觉
+### 集成学习的数学直觉
 
 假设每个模型准确率 60%（略强于随机猜测 50%）
 
@@ -156,7 +156,7 @@ plt.show()
 
 ---
 
-## 如何保证模型"不一样"？
+### 如何保证模型"不一样"？
 
 ```{mermaid}
 graph TD
@@ -175,17 +175,17 @@ graph TD
 
 ---
 
-# 第二部分：Bagging 与随机森林
+## 第二部分：Bagging 与随机森林
 
 ---
 
-## Bagging 原理
+### Bagging 原理
 
 **Bagging = Bootstrap Aggregating**
 
 ---
 
-### Step 1: Bootstrap（自助采样）
+#### Step 1: Bootstrap（自助采样）
 
 **问题**：只有一份训练数据，如何创造多份不同的数据？
 
@@ -227,7 +227,7 @@ plt.show()
 
 ---
 
-### Step 2: Aggregating（聚合）
+#### Step 2: Aggregating（聚合）
 
 ```{mermaid}
 graph TD
@@ -258,7 +258,7 @@ graph TD
 
 ---
 
-### Bagging 完整流程
+#### Bagging 完整流程
 
 1. **重复 M 次**：
    - 从训练集中 Bootstrap 采样
@@ -275,13 +275,13 @@ graph TD
 
 ---
 
-## 随机森林（Random Forest）
+### 随机森林（Random Forest）
 
 **随机森林 = Bagging + 特征随机**
 
 ---
 
-### 额外的随机性：特征随机选择
+#### 额外的随机性：特征随机选择
 
 **问题**：如果某个特征特别强（如 Titanic 中的性别），所有树都会优先用它分裂 → 树之间太相似
 
@@ -289,7 +289,7 @@ graph TD
 
 ---
 
-### 特征随机演示
+#### 特征随机演示
 
 ```{mermaid}
 graph TD
@@ -317,7 +317,7 @@ graph TD
 
 ---
 
-## 随机森林关键参数
+### 随机森林关键参数
 
 | 参数 | 含义 | 默认值 | 调参建议 |
 |------|------|--------|----------|
@@ -329,7 +329,7 @@ graph TD
 
 ---
 
-## 随机森林 vs 单棵决策树
+### 随机森林 vs 单棵决策树
 
 | 维度 | 决策树 | 随机森林 |
 |------|--------|----------|
@@ -344,11 +344,11 @@ graph TD
 
 ---
 
-# 第三部分：Boosting 与 GBDT
+## 第三部分：Boosting 与 GBDT
 
 ---
 
-## Boosting 核心思想
+### Boosting 核心思想
 
 **Bagging**：独立专家各自诊断，最后投票
 
@@ -356,7 +356,7 @@ graph TD
 
 ---
 
-### Bagging vs Boosting
+#### Bagging vs Boosting
 
 ```{mermaid}
 graph TD
@@ -376,7 +376,7 @@ graph TD
 
 ---
 
-### Boosting 流程
+#### Boosting 流程
 
 ```{mermaid}
 graph LR
@@ -398,7 +398,7 @@ graph LR
 
 ---
 
-## GBDT 原理
+### GBDT 原理
 
 **GBDT = Gradient Boosting Decision Tree**
 
@@ -406,7 +406,7 @@ graph LR
 
 ---
 
-### GBDT 示例（回归）
+#### GBDT 示例（回归）
 
 **数据**：真实房价 [100, 150, 200]
 
@@ -440,7 +440,7 @@ graph LR
 
 ---
 
-### GBDT 可视化
+#### GBDT 可视化
 
 ```{python}
 # GBDT 逐步修正示意
@@ -477,7 +477,7 @@ plt.show()
 
 ---
 
-## GBDT 关键参数
+### GBDT 关键参数
 
 | 参数 | 含义 | 默认值 | 调参建议 |
 |------|------|--------|----------|
@@ -488,7 +488,7 @@ plt.show()
 
 ---
 
-### 学习率的作用
+#### 学习率的作用
 
 ```{python}
 # 学习率对比
@@ -526,24 +526,24 @@ plt.show()
 
 ---
 
-# 总结
+## 总结
 
 ---
 
-## 本讲知识回顾
+### 本讲知识回顾
 
-### 集成学习
+#### 集成学习
 
 - **核心思想**："三个臭皮匠顶个诸葛亮"
 - **关键**：让多个模型"不一样"
 
-### Bagging（随机森林）
+#### Bagging（随机森林）
 
 - **方法**：Bootstrap 采样 + 特征随机
 - **优点**：降低方差，防止过拟合
 - **适用**：数据噪声大、需要稳定模型
 
-### Boosting（GBDT）
+#### Boosting（GBDT）
 
 - **方法**：串行训练，逐步修正错误
 - **优点**：降低偏差，精度高
@@ -551,7 +551,7 @@ plt.show()
 
 ---
 
-## Bagging vs Boosting 总结
+### Bagging vs Boosting 总结
 
 | 维度 | Bagging（随机森林） | Boosting（GBDT） |
 |------|---------------------|------------------|
@@ -571,7 +571,7 @@ plt.show()
 
 ---
 
-## 实战要点
+### 实战要点
 
 1. **先用默认参数跑通**  
    了解基线性能
@@ -590,7 +590,7 @@ plt.show()
 
 ---
 
-# Q&A
+## Q&A
 
 **Q1：集成学习（Ensemble Learning）试图解决单棵决策树的什么核心问题？**
 
