--- a/w6_neural_networks.qmd
+++ b/w6_neural_networks.qmd
@@ -24,11 +24,11 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ```
 
-# 开场：深度学习的神秘面纱
+## 开场：深度学习的神秘面纱
 
 ---
 
-## 深度学习无处不在
+### 深度学习无处不在
 
 **你每天都在使用深度学习**：
 
@@ -44,16 +44,16 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 本周目标：揭开神秘面纱
+### 本周目标：揭开神秘面纱
 
-### 知识目标
+#### 知识目标
 1. 理解神经元的基本概念
 2. 理解多层感知机（MLP）的网络结构
 3. 了解常见激活函数（ReLU、Sigmoid、Tanh）
 4. 理解前向传播和反向传播的直觉
 5. 知道何时用树模型 vs 神经网络
 
-### 技能目标
+#### 技能目标
 1. 使用 Keras 搭建简单的 MLP
 2. 训练 MLP 并可视化学习曲线
 3. 在测试集上评估 MLP 的 AUC
@@ -61,7 +61,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-### 核心理念
+#### 核心理念
 
 **深度学习不神秘**
 
@@ -71,13 +71,13 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-# 第一部分：从生物到人工
+## 第一部分：从生物到人工
 
 ---
 
-## 1.1 生物神经元
+### 1.1 生物神经元
 
-### 人脑的神经网络
+#### 人脑的神经网络
 
 - 人脑约有 **860 亿个神经元**
 - 每个神经元连接 **数千到上万个**其他神经元
@@ -86,7 +86,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-### 生物神经元的结构
+#### 生物神经元的结构
 
 ```{mermaid}
 graph LR
@@ -109,9 +109,9 @@ graph LR
 
 ---
 
-## 1.2 人工神经元
+### 1.2 人工神经元
 
-### 数学模型
+#### 数学模型
 
 **简化的神经元模型（1943年，McCulloch & Pitts）**：
 
@@ -129,7 +129,7 @@ $$
 
 ---
 
-### 可视化人工神经元
+#### 可视化人工神经元
 
 ```{mermaid}
 graph LR
@@ -159,7 +159,7 @@ $$
 
 ---
 
-### 具体例子：Titanic 生存预测
+#### 具体例子：Titanic 生存预测
 
 **特征**：
 
@@ -198,11 +198,11 @@ y = 1/(1+e^1.2) ≈ 0.23
 
 ---
 
-# 第二部分：激活函数
+## 第二部分：激活函数
 
 ---
 
-## 为什么需要激活函数？
+### 为什么需要激活函数？
 
 **没有激活函数的问题**：
 
@@ -221,7 +221,7 @@ $$
 
 ---
 
-## 常见激活函数
+### 常见激活函数
 
 $$
 \sigma(z) = \frac{1}{1 + e^{-z}}
@@ -281,7 +281,7 @@ plt.show()
 
 ---
 
-### Sigmoid 详解
+#### Sigmoid 详解
 
 **公式**：
 
@@ -312,7 +312,7 @@ $$
 
 ---
 
-### ReLU 详解
+#### ReLU 详解
 
 **公式**：
 
@@ -341,7 +341,7 @@ $$
 
 ---
 
-### Tanh 详解
+#### Tanh 详解
 
 **公式**：
 
@@ -372,7 +372,7 @@ $$
 
 ---
 
-### 激活函数对比表
+#### 激活函数对比表
 
 | 激活函数 | 范围 | 优点 | 缺点 | 主要用途 |
 |---------|------|------|------|---------|
@@ -390,13 +390,13 @@ $$
 
 ---
 
-# 第三部分：多层感知机（MLP）
+## 第三部分：多层感知机（MLP）
 
 ---
 
-## 网络结构
+### 网络结构
 
-### 从单个神经元到神经网络
+#### 从单个神经元到神经网络
 
 ```{mermaid}
 graph LR
@@ -463,7 +463,7 @@ graph LR
 
 ---
 
-### 符号表示
+#### 符号表示
 
 **输入层 → 隐藏层1 → 隐藏层2 → 输出层**
 
@@ -476,9 +476,9 @@ graph LR
 
 ---
 
-## 参数数量计算
+### 参数数量计算
 
-### Titanic 例子
+#### Titanic 例子
 
 ```
 Input(8) → Dense(64, ReLU) → Dense(32, ReLU) → Output(1, Sigmoid)
@@ -500,9 +500,9 @@ Input(8) → Dense(64, ReLU) → Dense(32, ReLU) → Output(1, Sigmoid)
 
 ---
 
-## 为什么需要多层？
+### 为什么需要多层？
 
-### 单层的局限性
+#### 单层的局限性
 
 **单层神经网络**（= 逻辑回归）：
 
@@ -554,7 +554,7 @@ plt.show()
 
 ---
 
-### 多层的威力：层次特征学习
+#### 多层的威力：层次特征学习
 
 ```{mermaid}
 graph TD
@@ -577,7 +577,7 @@ graph TD
 
 ---
 
-### 层数选择建议
+#### 层数选择建议
 
 | 数据量 | 推荐层数 | 原因 |
 |--------|---------|------|
@@ -594,13 +594,13 @@ graph TD
 
 ---
 
-# 第四部分：前向传播与反向传播
+## 第四部分：前向传播与反向传播
 
 ---
 
-## 前向传播（Forward Propagation）
+### 前向传播（Forward Propagation）
 
-### 从输入到输出的信息流
+#### 从输入到输出的信息流
 
 ```{mermaid}
 graph LR
@@ -625,9 +625,9 @@ graph LR
 
 ---
 
-## 损失函数（Loss Function）
+### 损失函数（Loss Function）
 
-### 衡量预测误差
+#### 衡量预测误差
 
 **二分类：Binary Cross-Entropy**
 
@@ -644,7 +644,7 @@ $$
 
 ---
 
-### 损失函数可视化
+#### 损失函数可视化
 
 ```{python}
 # Binary Cross-Entropy 可视化
@@ -671,9 +671,9 @@ plt.show()
 
 ---
 
-## 反向传播（Backpropagation）
+### 反向传播（Backpropagation）
 
-### 核心思想（不讲数学细节）
+#### 核心思想（不讲数学细节）
 
 **问题**：如何调整 W 和 b 来降低 Loss？
 
@@ -702,7 +702,7 @@ $$
 
 ---
 
-### 类比：登山下坡
+#### 类比：登山下坡
 
 ```{python}
 # 梯度下降可视化
@@ -738,9 +738,9 @@ plt.show()
 
 ---
 
-## 优化器（Optimizer）
+### 优化器（Optimizer）
 
-### SGD vs Adam
+#### SGD vs Adam
 
 | 优化器 | 全称 | 特点 | 何时用 |
 |--------|------|------|--------|
@@ -754,13 +754,13 @@ plt.show()
 
 ---
 
-# 第五部分：MLP vs 树模型
+## 第五部分：MLP vs 树模型
 
 ---
 
-## 何时用树模型，何时用 MLP？
+### 何时用树模型，何时用 MLP？
 
-### 对比表
+#### 对比表
 
 | 维度 | 树模型（RF/GBDT） | MLP |
 |------|------------|----------|
@@ -774,7 +774,7 @@ plt.show()
 
 ---
 
-### 金融领域实际情况
+#### 金融领域实际情况
 
 | 场景             | 数据类型     | 首选模型         | 原因     |
 |------------------|-------------|------------------|----------|
@@ -792,24 +792,24 @@ plt.show()
 
 ---
 
-# 总结
+## 总结
 
 ---
 
-## 本讲知识回顾
+### 本讲知识回顾
 
-### 神经元模型
+#### 神经元模型
 
 - 生物神经元 → 人工神经元
 - 加权求和 + 激活函数
 
-### 激活函数
+#### 激活函数
 
 - **Sigmoid**：输出层（二分类）
 - **ReLU**：隐藏层首选
 - **Tanh**：RNN 专用
 
-### 多层感知机
+#### 多层感知机
 
 - 输入层 → 隐藏层 → 输出层
 - 参数：权重 W + 偏置 b
@@ -817,14 +817,14 @@ plt.show()
 
 ---
 
-### 训练过程
+#### 训练过程
 
 - **前向传播**：输入 → 输出
 - **损失函数**：衡量误差
 - **反向传播**：计算梯度
 - **优化器**：更新参数（推荐 Adam）
 
-### MLP vs 树模型
+#### MLP vs 树模型
 
 | 场景 | 推荐模型 |
 |------|---------|
@@ -835,7 +835,7 @@ plt.show()
 
 ---
 
-## 核心要点
+### 核心要点
 
 1. **深度学习不神秘**  
    基于简单的数学运算累积
@@ -854,7 +854,7 @@ plt.show()
 
 ---
 
-# Q&A
+## Q&A
 
 **Q1：人工神经元是如何模拟生物神经元的？请写出人工神经元的基本数学模型。**
 
