--- a/w1_python_ml_intro.qmd
+++ b/w1_python_ml_intro.qmd
@@ -24,11 +24,11 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ```
 
-# 开场：我们为什么要学机器学习？
+## 开场：我们为什么要学机器学习？
 
 ---
 
-## 思考：这些场景有什么共同点？
+### 思考：这些场景有什么共同点？
 
 :::: {.columns}
 ::: {.column width="50%"}
@@ -51,7 +51,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 共同点：都需要处理复杂数据和决策
+### 共同点：都需要处理复杂数据和决策
 
 **这些场景的相似之处：**
 
@@ -74,7 +74,7 @@ ELSE 拒绝贷款
 
 ---
 
-## 这就是机器学习可以解决的问题！
+### 这就是机器学习可以解决的问题！
 
 **机器学习的方式：让计算机从数据中自动学习规律**
 
@@ -95,11 +95,11 @@ flowchart LR
 
 ---
 
-# 第一部分：什么是机器学习？
+## 第一部分：什么是机器学习？
 
 ---
 
-## 定义：机器学习的本质
+### 定义：机器学习的本质
 
 :::: {.columns}
 ::: {.column width="55%"}
@@ -142,9 +142,9 @@ flowchart TB
 
 ---
 
-## 为什么需要机器学习？维度诅咒
+### 为什么需要机器学习？维度诅咒
 
-### 维度诅咒（Curse of Dimensionality）
+#### 维度诅咒（Curse of Dimensionality）
 
 **问题：** 随着特征维度增加，数据变得异常稀疏
 
@@ -162,7 +162,7 @@ flowchart TB
 
 ---
 
-### 传统编程的困境
+#### 传统编程的困境
 
 **在高维特征空间中，人工编写规则变得不可能**
 
@@ -180,7 +180,7 @@ flowchart TB
 
 ---
 
-## 机器学习 vs 传统编程
+### 机器学习 vs 传统编程
 
 | 维度 | 传统编程 | 机器学习 |
 |------|---------|---------|
@@ -192,7 +192,7 @@ flowchart TB
 
 ---
 
-## 机器学习的分类
+### 机器学习的分类
 
 ```{mermaid}
 %%| fig-width: 10
@@ -216,9 +216,9 @@ flowchart TB
 
 ---
 
-## 大语言模型（LLM）与机器学习分类
+### 大语言模型（LLM）与机器学习分类
 
-### 什么是大语言模型？
+#### 什么是大语言模型？
 
 **大语言模型（Large Language Models）**：如 GPT、Claude、GLM 等
 
@@ -229,7 +229,7 @@ flowchart TB
 
 ---
 
-### LLM 在机器学习分类中的位置
+#### LLM 在机器学习分类中的位置
 
 ```{mermaid}
 %%| fig-width: 10
@@ -260,7 +260,7 @@ flowchart TB
 
 ---
 
-### 为什么 LLM 这么火？
+#### 为什么 LLM 这么火？
 
 1. **数据规模的突破**
 
@@ -288,7 +288,7 @@ flowchart TB
 
 ---
 
-### LLM 与传统机器学习的区别
+#### LLM 与传统机器学习的区别
 
 || 传统机器学习 | 大语言模型 |
 |------|----------|---------|
@@ -301,7 +301,7 @@ flowchart TB
 
 ---
 
-### LLM 在金融领域的应用
+#### LLM 在金融领域的应用
 
 1. **智能客服与对话**
 - 自动回答客户问题
@@ -327,7 +327,7 @@ flowchart TB
 
 ---
 
-## 机器学习的技术演进
+### 机器学习的技术演进
 
 ```{mermaid}
 %%| fig-width: 12
@@ -345,11 +345,11 @@ timeline
 
 ---
 
-# 第二部分：监督学习详解
+## 第二部分：监督学习详解
 
 ---
 
-## 什么是监督学习？
+### 什么是监督学习？
 
 **定义：** 从**带标签的数据**中学习，预测新数据的标签
 
@@ -361,7 +361,7 @@ timeline
 
 ---
 
-## 监督学习的完整流程
+### 监督学习的完整流程
 
 ```{mermaid}
 %%| fig-width: 12
@@ -383,7 +383,7 @@ flowchart LR
 
 ---
 
-## 核心概念1：特征（Features）
+### 核心概念1：特征（Features）
 
 **特征 = 用来预测的信息 = 输入变量 = X**
 
@@ -403,7 +403,7 @@ flowchart LR
 
 ---
 
-## 核心概念2：标签（Label）
+### 核心概念2：标签（Label）
 
 **标签 = 我们要预测的目标 = 输出变量 = y**
 
@@ -435,7 +435,7 @@ flowchart LR
 
 ---
 
-## 核心概念3：模型（Model）
+### 核心概念3：模型（Model）
 
 **模型 = 学到的规律 = 从X到y的映射函数**
 
@@ -457,7 +457,7 @@ $$
 
 ---
 
-## 训练（Training）= 让模型学习
+### 训练（Training）= 让模型学习
 
 **目标：** 找到最好的参数（系数），使得预测尽可能准确
 
@@ -506,11 +506,11 @@ plt.show()
 
 ---
 
-# 第三部分：分类 vs 回归
+## 第三部分：分类 vs 回归
 
 ---
 
-## 回归问题：预测连续数值
+### 回归问题：预测连续数值
 
 **定义：** 输出是一个**数字**，可以取任意值
 
@@ -529,7 +529,7 @@ plt.show()
 
 ---
 
-## 分类问题：预测离散类别
+### 分类问题：预测离散类别
 
 **定义：** 输出是一个**类别标签**
 
@@ -565,7 +565,7 @@ plt.show()
 
 ---
 
-## 快速判断：分类还是回归？
+### 快速判断：分类还是回归？
 
 **看输出类型！**
 
@@ -580,11 +580,11 @@ plt.show()
 
 ---
 
-# 第四部分：线性回归入门
+## 第四部分：线性回归入门
 
 ---
 
-## 最简单的例子：一维线性回归
+### 最简单的例子：一维线性回归
 
 **问题：** 已知房屋面积，预测房价
 
@@ -603,7 +603,7 @@ $$
 
 ---
 
-## 可视化理解线性回归
+### 可视化理解线性回归
 
 ```{python}
 #| echo: false
@@ -641,7 +641,7 @@ print(f"解释：面积每增加1m²，房价增加{model.coef_[0]:.2f}万元")
 
 ---
 
-## 训练目标：最小化误差
+### 训练目标：最小化误差
 
 **误差 = 真实值 - 预测值**
 
@@ -661,7 +661,7 @@ $$
 
 ---
 
-## 多维线性回归
+### 多维线性回归
 
 **现实中通常有多个特征：**
 
@@ -683,11 +683,11 @@ $$
 
 ---
 
-# 第五部分：训练集与测试集
+## 第五部分：训练集与测试集
 
 ---
 
-## 为什么要切分数据？
+### 为什么要切分数据？
 
 **问题场景：**
 
@@ -702,7 +702,7 @@ $$
 
 ---
 
-## 类比：练习题 vs 考试题
+### 类比：练习题 vs 考试题
 
 :::: {.columns}
 ::: {.column width="50%"}
@@ -730,7 +730,7 @@ $$
 
 ---
 
-## 数据切分流程
+### 数据切分流程
 
 ```{mermaid}
 %%| fig-width: 10
@@ -757,7 +757,7 @@ flowchart TB
 
 ---
 
-## 代码演示：数据切分
+### 代码演示：数据切分
 
 ```{python}
 #| echo: true
@@ -783,11 +783,11 @@ print(f"测试集的前5个样本索引：{y_test[:5]}")
 
 ---
 
-# 第六部分：过拟合与欠拟合
+## 第六部分：过拟合与欠拟合
 
 ---
 
-## 核心问题：模型的复杂度
+### 核心问题：模型的复杂度
 
 **太简单 → 欠拟合（Underfitting）**
 
@@ -797,7 +797,7 @@ print(f"测试集的前5个样本索引：{y_test[:5]}")
 
 ---
 
-## 欠拟合：模型太简单
+### 欠拟合：模型太简单
 
 **现象：** 训练集和测试集表现都差
 
@@ -834,7 +834,7 @@ print("结论：模型能力不足")
 
 ---
 
-## 过拟合：模型太复杂
+### 过拟合：模型太复杂
 
 **现象：** 训练集表现很好，测试集表现很差
 
@@ -879,7 +879,7 @@ print("结论：模型记住了噪声，不能泛化")
 
 ---
 
-## 恰到好处：良好的泛化能力
+### 恰到好处：良好的泛化能力
 
 ```{python}
 #| echo: false
@@ -931,7 +931,7 @@ plt.show()
 
 ---
 
-## 如何判断过拟合？
+### 如何判断过拟合？
 
 **关键指标：训练集误差 vs 测试集误差**
 
@@ -945,7 +945,7 @@ plt.show()
 
 ---
 
-## 类比：背题 vs 理解原理
+### 类比：背题 vs 理解原理
 
 :::: {.columns}
 ::: {.column width="33%"}
@@ -981,11 +981,11 @@ plt.show()
 
 ---
 
-# 第七部分：完整的机器学习流程
+## 第七部分：完整的机器学习流程
 
 ---
 
-## 端到端的完整流程
+### 端到端的完整流程
 
 ```{mermaid}
 %%| fig-width: 12
@@ -1011,7 +1011,7 @@ flowchart TD
 
 ---
 
-## 第一个完整例子：房价预测
+### 第一个完整例子：房价预测
 
 ```{python}
 #| echo: true
@@ -1044,7 +1044,7 @@ print(f"测试集平均误差：{mae:.2f}万元")
 
 ---
 
-## 可视化预测结果
+### 可视化预测结果
 
 ```{python}
 #| echo: false
@@ -1067,11 +1067,11 @@ plt.show()
 
 ---
 
-# 总结
+## 总结
 
 ---
 
-## 本讲核心知识点
+### 本讲核心知识点
 
 :::: {.columns}
 ::: {.column width="50%"}
@@ -1105,7 +1105,7 @@ plt.show()
 
 ---
 
-# Q&A
+## Q&A
 
 **Q1：什么是机器学习？它和传统编程在输入和输出上有何根本区别？**
 
