--- a/w0_syllabus.qmd
+++ b/w0_syllabus.qmd
@@ -6,7 +6,7 @@ title: 课程安排与考核要求
 
 - **课程性质**：本科二年级课程，面向零编程基础学生
 - **教学模式**：渐进式实践优先，理论+上机结合
-- **总课时**：7 周 × 2 学时/周 = 14 学时（每学时 45 分钟理论 + 45 分钟上机）
+- **总课时**：7 周 × 2 学时/周 = 14 学时（每周约 40 分钟理论 + 40 分钟上机）
 - **教学目标**：掌握机器学习基本概念、Python编程、数据分析技能
 
 ---
@@ -14,23 +14,29 @@ title: 课程安排与考核要求
 ## 教学周次安排
 
 ### **W1｜Python 基础 + 回归问题入门**
+
 **理论部分**
+
 * 机器学习是什么：预测问题、监督学习流程概览
 * 回归问题：线性回归直觉（拟合一条线）
 * 训练集/测试集、过拟合/欠拟合概念
 
 **上机部分**
+
 * 安装 Python 3.10 + VS Code + Jupyter Notebook
 * Python 速成：变量、列表、函数调用
 * 运行第一个机器学习程序（线性回归）
 
 ### **W2｜数据处理与线性回归实践**
+
 **理论部分**
+
 * 数据预处理：缺失值、异常值、归一化
 * 回归模型评估指标：MAE、RMSE
 * 数据可视化的重要性
 
 **上机部分**
+
 * pandas 读数据探索、可视化
 * 线性回归模型训练与评估
 * 残差分析
@@ -38,17 +44,20 @@ title: 课程安排与考核要求
 ### **W3｜线性回归的正则化：Ridge, Lasso 与 Elastic Net**
 
 **理论部分**
+
 * 过拟合与欠拟合回顾：训练集 vs 测试集表现
 * 正则化线性回归：Ridge（L2）、Lasso（L1）、Elastic Net
 * 正则化参数 α 的选择：交叉验证概念
 
 **上机部分**
+
 * 用 sklearn 实现 Ridge/Lasso/Elastic Net
 * 调参实验：不同 α 值观察系数变化
 * 正则化路径图、残差图可视化
 * 特征重要性分析（Lasso 稀疏性）
 
 **W3 项目立项验收标准**（第四讲前检查）
+
 * [ ] GitHub 有 README（题目、数据来源、小组分工）
 * [ ] 能用 Jupyter Notebook 加载数据并
 * [ ] 有一张数据可视化图（任意类型）
@@ -56,12 +65,14 @@ title: 课程安排与考核要求
 ### **W4｜分类问题、决策树与评估指标**
 
 **理论部分**
+
 * 分类 vs. 回归：预测类别而非数值
 * 决策树原理（用流程图展示，不讲数学）
 * 评估指标体系：混淆矩阵、准确率/召回率/精确率/F1、ROC/AUC
 * 类别不平衡问题
 
 **上机部分**
+
 * Titanic 数据集：加载、探索、处理类别变量
 * 决策树分类器训练（sklearn 模板）
 * 评估可视化：混淆矩阵、ROC 曲线、AUC 计算
@@ -70,11 +81,13 @@ title: 课程安排与考核要求
 ### **W5｜集成学习：随机森林与 GBDT**
 
 **理论部分**
+
 * 决策树局限：过拟合问题
 * 集成学习思想：Bagging（随机森林）vs Boosting（GBDT）
 * 关键超参数：树深度、树数量、学习率、特征采样
 
 **上机部分**
+
 * 随机森林：训练对比决策树 + 特征重要性可视化
 * GBDT：LightGBM 实现 + 超参数调整
 * 三模型对比：AUC、训练时间
@@ -82,6 +95,7 @@ title: 课程安排与考核要求
 ### **W6｜神经网络基础**
 
 **理论部分**
+
 * 神经网络是什么：神经元模型、多层感知机（MLP）
 * 激活函数：ReLU、Sigmoid、Tanh
 * 前向传播与反向传播概念
@@ -89,6 +103,7 @@ title: 课程安排与考核要求
 * 何时用树模型 vs MLP
 
 **上机部分**
+
 * Keras 快速入门：Sequential 模型搭建
 * 第一个 MLP（Titanic）：数据预处理（归一化、one-hot）
 * 训练可视化：loss/accuracy 曲线 + 测试集 AUC
@@ -96,19 +111,15 @@ title: 课程安排与考核要求
 ### **W7｜项目答辩**
 
 **答辩形式**
+
 * 每组 8 分钟展示 + 4 分钟提问
 * 提交：6–8 页报告 + 答辩 PDF + 项目仓库（详见教学资源）
 
 **验收标准**
+
 * [ ] 能用简单脚本完整跑通实验
 * [ ] 有清晰的结果展示：至少 2 种模型对比、评估指标表格、2-3 张关键图
 * [ ] README 包含：问题描述、数据说明、复现步骤、结果总结
-* [ ] 报告有基本的误差分析（哪些样本预测错了、为什么）
-
-**加分项**（非必需）
-* 模块化代码结构（`src/` 目录）
-* 一键复现脚本（`run.sh`）
-* SHAP 特征解释、稳健性分析
 
 ---
 
