--- a/w0_syllabus.qmd
+++ b/w0_syllabus.qmd
@@ -56,11 +56,7 @@ title: 课程安排与考核要求
 * 正则化路径图、残差图可视化
 * 特征重要性分析（Lasso 稀疏性）
 
-**W3 项目立项验收标准**（第四讲前检查）
-
-* [ ] GitHub 有 README（题目、数据来源、小组分工）
-* [ ] 能用 Jupyter Notebook 加载数据并
-* [ ] 有一张数据可视化图（任意类型）
+**W3 项目立项验收**（第四讲前提交）
 
 ### **W4｜分类问题、决策树与评估指标**
 
@@ -123,6 +119,26 @@ title: 课程安排与考核要求
 
 ---
 
+## 考核要求
+
+### **必修课总分构成**（50 分制）
+| 项目 | 权重 | 说明 |
+|------|------|------|
+| 机器学习项目 | 20分 | W3立项+ W7 项目答辩 |
+| 期末考试 | 25分 | 判断 + 选择 + 案例分析（涵盖 W1-W6 理论知识） |
+| 课堂参与 | 5分 | 出勤（随机点名） |
+| **合计** | **50分** | |
+
+### **选修课总分构成**（50 分制）
+| 项目 | 权重 | 说明 |
+|------|------|------|
+| 机器学习项目 | 30分 | W3立项 + W7 项目答辩 |
+| 课堂Quiz | 15分 | 三次课堂小测（在W2、W4与W6上课时进行） |
+| 课堂参与 | 5分 | 出勤（随机点名） |
+| **合计** | **50分** | |
+
+---
+
 ## 机器学习项目池
 
 **难度系数**决定最终评分加成
@@ -143,10 +159,10 @@ title: 课程安排与考核要求
 
 ## 项目最低交付标准
 
-### **W3 验收**（第四周上课前上传）
+### **W3 验收**（第四周上课前提交到学习通/GitHub）
 * [ ] 项目仓库建立（包含相关文件夹）
 * [ ] README 包含题目、数据来源、成员分工
-* [ ] 能在 Jupyter Notebook 中加载数据并展示基本统计信息
+* [ ] 能在 Python程序脚本/Jupyter Notebook 中加载数据并展示基本统计信息
 * [ ] 至少一张数据可视化图
 
 ### **W7 验收**（答辩时）
@@ -160,7 +176,7 @@ title: 课程安排与考核要求
   * 报告有问题描述、方法、结果、分析
 
 ### **扣分项**
-* 代码无法运行：无法手动运行 Notebook，或运行结果与 README 不符
+* 代码无法运行：无法手动运行Python程序脚本/Notebook，或运行结果与 README 不符
 * 数据泄露（未做训练/测试切分，或使用未来信息）
 * 结果造假：结果与 README 不符，或结果无法复现
 * 大段抄袭：代码/报告抄袭他人，或与他人代码/报告雷同
@@ -170,45 +186,10 @@ title: 课程安排与考核要求
 * 在代码中展示调参过程（如网格搜索等）
 * 模块化代码结构
 
----
-
-## 考核要求
-
-### **必修课总分构成**（50 分制）
-| 项目 | 权重 | 说明 |
-|------|------|------|
-| 机器学习项目 | 20分 | W3立项+ W7 项目答辩 |
-| 期末考试 | 25分 | 判断 + 选择 + 案例分析（涵盖 W1-W6 理论知识） |
-| 课堂参与 | 5分 | 出勤（随机点名） |
-| **合计** | **50分** | |
-
-### **选修课总分构成**（50 分制）
-| 项目 | 权重 | 说明 |
-|------|------|------|
-| 机器学习项目 | 30分 | W3立项 + W7 项目答辩 |
-| 课堂Quiz | 15分 | 三次课堂小测（在W2、W4与W6上课时进行） |
-| 课堂参与 | 5分 | 出勤（随机点名） |
-| **合计** | **50分** | |
-
 ### **项目评分**
 - **基础分（60 分）**：代码能跑 + 有结果 + 文档齐全
 - **质量分（30 分）**：模型对比合理 + 分析有深度 + 可视化清晰
 - **难度加成（10 分）**：原始分 × 难度系数（0.9-1.1）
-
-### **项目验收清单**
-
-#### **W3 检查**
-- [ ] 建立代码仓库，包含项目结构的文件夹
-- [ ] README 包含项目介绍、数据来源、成员分工
-- [ ] 有能运行的 Notebook，能加载数据并展示基本统计信息
-- [ ] 有至少 1 张可视化图
-
-#### **W7 检查**
-- [ ] 按照 README 能成功复现（可以手动运行 Notebook，并展示结果）
-- [ ] 有至少 2 种模型的对比结果
-- [ ] 有评估指标表格和 2-3 张关键图
-- [ ] 报告符合基本学术规范（有问题、方法、结果、分析）
-- [ ] 代码有基本注释，关键步骤能看懂，结构清晰
 
 ---
 
