--- a/w0_syllabus.qmd
+++ b/w0_syllabus.qmd
@@ -125,7 +125,7 @@ title: 课程安排与考核要求
 | 项目 | 权重 | 说明 |
 |------|------|------|
 | 机器学习项目 | 20分 | W3立项+ W7 项目答辩 |
-| 期末考试 | 25分 | 判断 + 选择 + 案例分析（涵盖 W1-W6 理论知识） |
+| 期末考试 | 25分 | 选择 + 判断 + 论述 + 案例分析（涵盖 W1-W6 理论知识） |
 | 课堂参与 | 5分 | 出勤（随机点名） |
 | **合计** | **50分** | |
 
@@ -133,7 +133,7 @@ title: 课程安排与考核要求
 | 项目 | 权重 | 说明 |
 |------|------|------|
 | 机器学习项目 | 30分 | W3立项 + W7 项目答辩 |
-| 课堂Quiz | 15分 | 三次课堂小测（在W2、W4与W6上课时进行） |
+| 课堂Quiz | 15分 | 三次课堂小测（在W3、W5与W7上课时进行） |
 | 课堂参与 | 5分 | 出勤（随机点名） |
 | **合计** | **50分** | |
 
@@ -175,6 +175,11 @@ title: 课程安排与考核要求
   * README 有复现步骤
   * 报告有问题描述、方法、结果、分析
 
+### **项目评分**
+- **基础分（60 分）**：代码能跑 + 有结果 + 文档齐全
+- **质量分（30 分）**：模型对比合理 + 分析有深度 + 可视化清晰
+- **难度加成（10 分）**：原始分 × 难度系数（0.9-1.1）
+
 ### **扣分项**
 * 代码无法运行：无法手动运行Python程序脚本/Notebook，或运行结果与 README 不符
 * 数据泄露（未做训练/测试切分，或使用未来信息）
@@ -186,17 +191,13 @@ title: 课程安排与考核要求
 * 在代码中展示调参过程（如网格搜索等）
 * 模块化代码结构
 
-### **项目评分**
-- **基础分（60 分）**：代码能跑 + 有结果 + 文档齐全
-- **质量分（30 分）**：模型对比合理 + 分析有深度 + 可视化清晰
-- **难度加成（10 分）**：原始分 × 难度系数（0.9-1.1）
-
 ---
 
 ## 教学资源
 
 1. **教学资料**：
-   - 课程handouts（https://fintech-ml.netlify.app/）
+
+   - 课程讲义（https://fintech-ml.netlify.app/）
    - 网上教材（https://ai-first-ml.netlify.app/）
 
 2. **`project_list/`**：项目说明
